# qedic

./: CMakeLists.txt  README.md
service/Installation/: vtk7-Qt5_linking.txt
service/Licenses/: Open3D
src/forms/: mainwindow.ui
src/headers/: Timestamp.h  bboxes.h  mainwindow.h  metric2D.h  metric2DOD.h  metric2DSS.h  metric3D.h  metric3DOD.h  mode2DOD.h  mode2DSS.h  mode3DOD.h  vtkWidget.h
src/resource/: resources.qrc
src/sources/: .mainwindow.cpp.swp  mainwindow.cpp  metric2D.cpp  metric2DOD.cpp  metric2DSS.cpp  metric3D.cpp  metric3DOD.cpp  mode2DOD.cpp  mode2DSS.cpp  mode3DOD.cpp  vtkWidget.cpp
